# CurveLib

./: .gitignore  Bezier.cpp  Bezier.h  CMakeLists.txt  CurveLib.cpp  CurveLib.h  LICENSE  README.md  all_incl.cpp  all_incl.h  vec.h
Assets/: BezierEval.glsl  GeomInvariant.glsl  bernstein_reconstruction_coeffs.m  curveControlInfo.frag  curveControlInfo.vert  generate_reconstruction_glsl.sh  optimize.glsl  reconstruction.php  reconstruction1.glsl  reconstruction1_1.glsl  reconstruction1_2.glsl  reconstruction2.glsl  reconstruction2_1.glsl  reconstruction2_2.glsl  reconstruction3.glsl  reconstruction3_1.glsl  reconstruction3_2.glsl  shader_basic.frag  shader_basic.vert  shader_tess_adv.frag  shader_tess_adv.tcs  shader_tess_adv.tes  shader_tess_adv.vert
CommandLine/: CMakeLists.txt  CommandLine.hpp  main.cpp
CurveLib/: CMakeLists.txt  Curve.hpp  Examples.cpp  Examples.hpp  GLUtils.cpp  GLUtils.h  GeomInvariant.cpp  GeomInvariant.hpp  MathFunctions.cpp  MathFunctions.hpp  RandomCurve.cpp  RandomCurve.hpp  SimpleCurves.hpp  Utils.cpp  Utils.hpp  all_incl.cpp  all_incl.h  bezier.cpp  bezier.frag  bezier.h  bezier.vert  bezierCurve.cpp  bezierCurve.h  bezierCurve_gpu.cpp  bezierSquareSurface.cpp  bezierSquareSurface.h  bezierSquareSurface_gpu.cpp  bezier_gpu.cpp  beztcs.tcs  beztes.tes  curvelib.cpp  curvelib.h  fragment.frag  vec.h  vertex.vert
Curve_DT/: CMakeLists.txt  CurveRenderer.cpp  MyApp.cpp  MyApp.h  gCamera.cpp  gCamera.h  gShaderProgram.h  main.cpp
Curve_DT/Font/: FontFace.cpp  FontFace.h  FontManager.cpp  FontManager.h  Glyph.cpp  Glyph.h  Segmenter.cpp  Segmenter.h
Differential_Geometry/: Bezier.hpp  CMakeLists.txt  CommandLine.hpp  CurveRenderer.h  Examples.cpp  Examples.hpp  MyApp.cpp  MyApp.h  README.md  Utils.hpp  gShaderProgram.cpp  main.cpp  shader.vert  shader_curve.vert
Differential_Geometry/copy/: Curve.hpp
GPUcompute/: BezierEval.glsl  CMakeLists.txt  GeomOptimize.cpp  GeomOptimize.hpp  Reconstruction.hpp  Reconstruction_CPU.inl  gBuffer.cpp  gBuffer.h  gShaderProgram.cpp  gShaderProgram.h  optimize.glsl
Imgui/: CMakeLists.txt
Viewer/: CMakeLists.txt  CurveRenderer.cpp  CurveRenderer.h  GLUtils.hpp  GeomInvariant.glsl  MyApp.cpp  MyApp.h  gShaderProgram.cpp  gVertexBuffer.cpp  gVertexBuffer.h  main.cpp  shader_basic.vert  shader_curve.frag  shader_curve.vert  shader_tess_adv.frag  shader_tess_adv.tes  shader_tess_adv.vert
alglib/: CMakeLists.txt
